# KurosawaDia

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .example.env  .gitignore  Bot.sln  CNAME  Cargo.toml  Dockerfile  KurosawaDia.sln  LICENSE  PRIVACY.md  README.md  SECURITY.md  changelog.md  docker-compose.yml  docker-update.sh  en.html  example.env  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: codeql-analysis.yml  docker-publish.yml  docker.yml  dotnetcore.yml  node.js.yml  rust.yml
BlazorGUI/: BlazorGUI.csproj  Program.cs  Startup.cs
BlazorGUI/Pages/: Index.cshtml  Index.cshtml.cs  _Imports.razor  _ViewImports.cshtml
BlazorGUI/Properties/: launchSettings.json
Bot/: Bot.csproj  Core.cs
Bot/APIs/: ApisGen.cs  WeebGen.cs
Bot/Chamadas Externas/: Servidores.cs
Bot/Comandos/: Ajuda.cs  Configuracoes.cs  CustomReactions.cs  Especiais.cs  ExempleModuleUP1.2.4.cs  Image.cs  Moderacao.cs  Nsfw.cs  Owner.cs  Utility.cs  Weeb.cs
Bot/Constantes/: InfoImportante.cs  Links.cs
Bot/Constructors/: MySqlConstructor.cs  SQLiteConstrutor.cs
Bot/DAO/: ApiConfigDAO.cs  AyuraConfigDAO.cs
Bot/DBs/: Dia BaseTables.sql  Dia.sql  DiaADMS.sql  DiaAcr.sql  DiaCanais.sql  DiaCargos.sql  DiaConfigServer.sql  DiaFileGenerate.bat  DiaFuck.sql  DiaInsultos.sql  DiaPI.sql  Dia_ADMS_2.sql  Dia_Acr_2.sql  Dia_BaseTables_1.sql  Dia_Canais_2.sql  Dia_Cargos_2.sql  Dia_ConfigServer_2.sql  Dia_Fuck_2.sql  Dia_Insultos_2.sql  Dia_MonitoringProcedures_2.sql  Dia_PI_3.sql  MarinaSQL.bat  MonitoringProcedures.sql  coisas pra por na framboesa.sql  testesProcedures.sql
Bot/Extensions/: AdmsExtensions.cs  ArrayExtension.cs  ArrayExtensions.cs  User.cs  (+18 more)
ConfigurationControler/: ConfigurationControler.csproj
DBs/: Ayura.db  Ayura.sql  Kurosawa.db  Kurosawa.sql  Teste.db
ElectronGUI/: ElectronGUI.csproj  Program.cs  Startup.cs  electron.manifest.json
KurosawaDia/: KurosawaDia.csproj  Program.cs
LauncherGUI/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Launcher.Designer.cs  Launcher.cs  Launcher.resx  LauncherGUI.Designer.cs  LauncherGUI.cs  LauncherGUI.csproj  Program.cs  Servidores.Designer.cs  Servidores.cs  Servidores.resx  WindowsGUI.csproj  packages.config
MainDatabaseControler/: MainDatabaseControler.csproj
NetCoreGUI/: Launcher.cs  NetCoreGUI.csproj
Site/: Site.csproj  Web.config  configDia.db  index.aspx  index.aspx.cs  index.aspx.designer.cs  packages.config
css/: index.css  main.css
docker/: ssh.Dockerfile
docs/: codeModel.md  commitModel.md
en/: en.html
js/: index.mjs  main.js  redirecionar.mjs
paginas/: comandos.html  informacao.html  main.html  redirecionar.html
src/: bot.ts  config.rs  events.rs  index.ts  main.rs
tasks/: bot.md  commands.md  todo-list.md
tests/: teste.ts
(+484 files in other folders)
