[package]
name = "kurosawa_dia"
version = "1.4.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15.0"
rand = "^0.8.3"
unic-emoji-char = "^0.9.0"
chrono = "^0.4.19"
unidecode = "^0.3.0"
mysql = "^20.1.0"
base64 = "^0.13.0"
serde_urlencoded = "^0.7.0"
serde_json = "^1.0.64"
serde_repr = "^0.1.7"

[dependencies.serenity]
features = ["collector"]
version = "^0.10.5"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "^1.5.0"

[dependencies.serde]
features = ["derive"]
version = "^1.0.125"

[dependencies.isahc]
features = ["json"]
version = "^1.3.1"
