[package]
name = "kurosawa_dia"
description = "New stage - Patch 3"
version = "1.4.3"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "^0.10.8", features = ["collector"] }
tokio = { version = "^1.5.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "^0.15.0" }
rand = { version = "^0.8.3" }
unic-emoji-char = { version = "^0.9.0" }
chrono = { version = "^0.4.19" }
unidecode = { version = "^0.3.0" }
mysql = { version = "^20.1.0" }
base64 = { version = "^0.13.0" }
isahc = { version = "^1.3.1", features = ["json"] }
serde = { version = "^1.0.125", features = ["derive"] }
serde_urlencoded = { version = "^0.7.0" }
serde_json = { version = "^1.0.64" }
serde_repr = { version = "^0.1.7" }
lazy_static = { version = "^1.4.0" }
