[package]
name = "kurosawa_dia"
description = "New stage - Patch 5"
version = "1.4.5"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", features = ["collector"] }
tokio = { version = "1.20.3", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
rand = { version = "0.8.5" }
unic-emoji-char = { version = "0.9.0" }
chrono = { version = "0.4.19" }
unidecode = { version = "0.3.0" }
mysql = { version = "22.2.0" }
base64 = { version = "0.13.0" }
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_urlencoded = { version = "0.7.1" }
serde_json = { version = "1.0.82" }
serde_repr = { version = "0.1.8" }
lazy_static = { version = "1.4.0" }
